# team-platform

./: .gitignore  readme.md
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.sh  pyproject.toml  pytest.ini  setup.cfg
backend/itm_backend/: db.sqlite3_old.bak  manage.py  pyproject.toml
backend/itm_backend/api/: apps.py  decorators.py  permissions.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
backend/itm_backend/itm_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/itm_backend/projects/: admin.py  apps.py  factory.py  models.py  serializers.py  urls.py  views.py
backend/itm_backend/projects/migrations/: 0001_initial.py  0002_auto_20230812_0926.py  0002_initial.py  0002_task_priority.py  0003_alter_task_options.py  0003_auto_20230815_1615.py  0003_task_project.py  0004_alter_project_start.py  0004_auto_20230829_1954.py  0004_project_start.py
backend/itm_backend/task/: admin.py  models.py  serializers.py
backend/itm_backend/task/migrations/: 0001_initial.py  0002_alter_taskuser_task_id.py  0003_alter_taskuser_user_id.py  0004_alter_task_asigned_to.py  0005_rename_asigned_to_task_assigned_to.py
backend/itm_backend/users/: admin.py  models.py  serializers.py  tests.py
backend/itm_backend/users/migrations/: 0001_initial.py  0002_alter_timetable_options.py  0002_alter_user_role.py  0002_alter_user_telephone_number.py  0002_auto_20230718_1723.py  (+8 more)
backend/tests/: conftest.py  test_jwt.py  test_projects.py  test_tasks.py  test_urls.py
backend/tests/fixtures/: fixture_data.py  fixture_user.py
(+153 files in other folders)
