[tool.poetry]
name = "itm_backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = ">=3.2,<4.0"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
pillow = "^10.0.0"
djoser = "^2.2.0"
djangorestframework-simplejwt = "^5.2.2"
psycopg2-binary = "2.9.6"
gunicorn = "^21.1.0"
drf-spectacular = "^0.26.3"
django-cors-headers = "^4.2.0"
pytest = "^7.4.0"
pytest-django = "^4.5.2"
django-phonenumber-field = "^7.1.0"
phonenumbers = "^8.13.18"
flake8-django = "^1.4"
django-resized = "^1.0.2"



[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
mypy = "^1.4.1"
pylint = "^2.17.4"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
